# felpsbot-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
app/core/models/: database.py
app/core/schemas/: eventsub.py
eventsub/: .env.example  Dockerfile  pyproject.toml
eventsub/app/: main.py
eventsub/app/core/: constants.py  eventsub.py  redis.py  twitch.py
eventsub/app/core/dependencies/: signature.py  twitch.py
eventsub/app/core/models/: database.py
eventsub/app/core/schemas/: __init__.py  eventsub.py  twitch.py
eventsub/app/routes/: eventsub.py  gametime.py
prisma/: schema.prisma
sql/: init.sql
src/: main.py
src/core/: constants.py  database.py  eventsub.py  prisma.py  redis.py  settings.py  twitch.py
src/core/dependencies/: auth.py  signature.py  twitch.py
src/core/models/: eventsub.py
src/core/schemas/: auth0.py  twitch.py
src/routes/: eventsub.py  gametime.py
tests/: conftest.py  test_gametime.py  test_twitch.py  utils.py
