[tool.poetry]
name = "felpsbot-backend"
version = "0.1.0"
description = "FelpsBot Backend"
authors = ["Pármenas Haniel <parmenashp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
httpx = "^0.24.1"
loguru = "^0.7.0"
redis = "^4.6.0"
Authlib = "^1.1.0"
orjson = "^3.9.1"
iso8601 = "^2.0.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
humanize = "^4.7.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.2.0"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
